src/main/java/oo/solid/dip/sample/good/Individual.java
package oo.solid.dip.sample.good;

public interface Individual {
    String getInfo();
}
