src/main/java/oo/solid/dip/sample/bad/Person.java
package oo.solid.dip.sample.bad;

public class Person {
    public String getInfo() {
        return "";
    }
}
